.labs/Local-Kubernetes/ml-pipeline/manifests/label-studio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: label-studio
spec:
  type: ClusterIP
  selector:
    app: label-studio
  ports:
    - name: http
      port: 8080
      targetPort: 8080
